Rendered site in second language - Sinhala Memory Cache used.

--- a/LordLamington.Heartcore.Web/appsettings.json
+++ b/LordLamington.Heartcore.Web/appsettings.json
@@ -5,8 +5,11 @@
     }
   },
   "AllowedHosts": "*",
-  "Umbraco": {
+  "UmbracoConfig": {
     "ProjectAlias": "",
     "ApiKey": ""
+  },
+  "NodeSettings": {
+    "DictionaryNodeGuid": "95f2da27-0203-4c14-a74d-e95a5b574fec"
   }
 }
