Display screen mode added in. Image crops used for product image rendering.

--- a/LordLamington.Heartcore.Web/LordLamington.Heartcore.Web.csproj
+++ b/LordLamington.Heartcore.Web/LordLamington.Heartcore.Web.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Umbraco.Headless.Client.Net" Version="1.0.0.29753" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\display\" />
+  </ItemGroup>
+
 </Project>
